--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -20,7 +20,7 @@ RUN rm -rf /var/cache/apt/archives /var/lib/apt/lists/*
 
 ENTRYPOINT [ "/s6-init" ]
 
-ADD s6/debian-root /
+ADD s6/{{ pihole.os }}-root /
 COPY s6/service /usr/local/bin/service
 
 # php config start passes special ENVs into
